fix make sure code elements wrap when they get too long

--- a/src/styles/elements/code.css
+++ b/src/styles/elements/code.css
@@ -17,4 +17,6 @@ li {
 
 code {
 	font-family: var(--wp--preset--font-family--code);
+	word-wrap: break-word;
+	overflow-wrap: anywhere;
 }
